<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_navigation</name>
  <version>0.1.0</version>
  <description>
    Nav2 설정/런치 패키지.
    기본 모드는 SLAM(my_slam)과 동시 실행 — 지도를 만들면서 목표점 자율주행
    (로봇청소기 시나리오). 저장된 지도 + AMCL localization 모드도 지원.
  </description>
  <maintainer email="mslee@robotegra.com">Myungsang Lee</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 런치/설정만 담는 패키지 — 실행 의존성만 선언 -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>my_slam</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
