<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_slam</name>
  <version>0.1.0</version>
  <description>
    slam_toolbox(online async) 설정/런치 패키지.
    Pi 의 turtlebot3_bringup 이 publish 하는 /scan, /odom, /tf 를 받아
    Remote PC 에서 SLAM 을 수행하고 RViz2 로 확인한다.
  </description>
  <maintainer email="mslee@robotegra.com">Myungsang Lee</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 런치/설정만 담는 패키지라 실행 의존성만 있으면 된다 -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
